--- a/src/components/NoRoute/noRoute.css
+++ b/src/components/NoRoute/noRoute.css
@@ -34,7 +34,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
-  color: #3456F3;
+  color: #2BE080;
   list-style-type: none;
 }
 @media screen and (max-width: 800px) {
