--- a/src/components/Main/NavTab/navTab.css
+++ b/src/components/Main/NavTab/navTab.css
@@ -1,6 +1,6 @@
 .navTab {
   width: 100%;
-  background: #000000;
+  background: #F5F5F5;
 }
 .navTab__list{
   height: 100%;
@@ -24,7 +24,7 @@
   font-size: 13px;
   line-height: 16px;
   text-decoration: underline;
-  color: #ffffff;
+  color: #000000;
 }
 .navTab__link:hover {
   cursor: pointer;
