--- a/src/components/Main/Promo/promo.css
+++ b/src/components/Main/Promo/promo.css
@@ -4,7 +4,7 @@
   grid-template-rows: 1fr;
   width: 100%;
   height: 524px;
-  background: #073042;
+  background: #5C5C5C;
 }
 .promo__logo {
   grid-column: 1/2;
