--- a/src/components/PopupWithForm/popupWithForm.css
+++ b/src/components/PopupWithForm/popupWithForm.css
@@ -65,7 +65,7 @@
 .formAuth__save {
   width: 396px;
   height: 45px;
-  background-color: #3456F3;
+  background-color: #2BE080;
   border-radius: 3px;
   font-weight: 500;
   font-size: 14px;
@@ -77,7 +77,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
-  color: #3456F3;
+  color: #2BE080;
 }
 .formRegister__save {
     margin-top: 69px;
