--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,9 +1,13 @@
 .header {
   width: 100%;
-  height: 74px;
+  min-height: 74px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+.headerAuth {
+  width: 396px;
+  margin: 0 auto;
 }
 .header__logo {
   margin-left: 70px;
@@ -11,6 +15,10 @@
 .header__logo:hover {
   cursor: pointer;
   opacity: 0.8;
+}
+.headerAuth__logo {
+  margin: 0;
+  margin-top: 70px;
 }
 .header__nav {
   margin-right: 70px;
@@ -22,14 +30,34 @@
   .header__logo {
     margin-left: 30px;
   }
+  .headerAuth__logo {
+    margin: 0;
+    margin-top: 232px;
+  }
   .header__nav {
     /* display: none; */
     margin-right: 30px;
   }
 }
+@media screen and (max-width: 500px) {
+  .headerAuth {
+    width: 335px;
+    justify-content: center;
+  }
+}
 @media screen and (max-width: 400px) {
+  .header {
+    /* justify-content: center; */
+  }
+  .headerAuth {
+    width: 260px;
+  }
   .header__logo {
-    margin-left: 14px;
+    margin: 30px;
+  }
+  .headerAuth__logo {
+    margin: 0;
+    margin-top: 56px;
   }
   .header__nav {
     margin-right: 14px;
