--- a/src/components/PopupWithForm/popupWithForm.css
+++ b/src/components/PopupWithForm/popupWithForm.css
@@ -11,6 +11,7 @@
   font-size: 24px;
   line-height: 29px;
   color: #000000;
+  margin: 74px auto 123px;
 }
 .form__save {
   border: none;
@@ -42,9 +43,9 @@
   margin-right: 6px;
   color: #A0A0A0;
 }
-.formProfile__heading {
+/* .formProfile__heading {
   margin: 74px auto 123px;
-}
+} */
 .formProfile__save {
   margin-top: 203px;
   background-color: #ffffff;
@@ -60,6 +61,7 @@
   color: #FF004D;
 }
 .formAuth__heading {
+  width: 396px;
   margin: 40px auto;
 }
 .formAuth__save {
@@ -89,15 +91,22 @@
   .form__buttonOption {
     margin: 16px auto 250px;
   }
-  .formProfile__heading {
+  .form__heading {
     margin: 236px auto 96px;
   }
   .formProfile__save {
     margin-top: 193px;
   }
+  .formAuth__heading {
+    width: 396px;
+    margin: 40px auto;
+  }
 }
 @media screen and (max-width: 500px) {
   .formAuth__save {
+    width: 335px;
+  }
+  .formAuth__heading {
     width: 335px;
   }
 }
@@ -105,7 +114,7 @@
   .form__buttonOption {
     margin: 14px auto 30px;
   }
-  .formProfile__heading {
+  .form__heading {
     margin: 70px auto 80px;
   }
   .formProfile__save {
@@ -114,7 +123,9 @@
     line-height: 15px;
   }
   .formAuth__heading {
+    width: 260px;
     margin: 50px auto 80px;
+    text-align: center;
   }
   .formAuth__save {
     width: 260px;
