--- a/src/index.css
+++ b/src/index.css
@@ -12,14 +12,14 @@
 @import url(components/Footer/footer.css);
 @import url(components/Header/header.css);
 @import url(components/Navigation/navigation.css);
-@import url(components/Movies/SearchForm/searchForm.css);
+@import url(components/SearchForm/searchForm.css);
 @import url(components/Movies/MoviesCardList/moviesCardList.css);
 @import url(components/Movies/MoviesCard/moviesCard.css);
-@import url(components/Movies/Preloader/preloader.css);
+@import url(components/Preloader/preloader.css);
 @import url(components/PopupWithForm/popupWithForm.css);
 @import url(components/Profile/profile.css);
-@import url(components/Login/login.css);
-@import url(components/Register/register.css);
+/* @import url(components/Login/login.css); */
+/* @import url(components/Register/register.css); */
 @import url(components/FieldForm/fieldForm.css);
 
 
