--- a/src/components/Main/AboutMe/aboutMe.css
+++ b/src/components/Main/AboutMe/aboutMe.css
@@ -120,18 +120,18 @@
   .aboutMe {
     padding-top: 70px;
   }
-  .aboutMe__heading {
+  /* .aboutMe__heading {
     margin: 0 auto 28px 14px;
-  }
-  .aboutMe__line {
+  } */
+  /* .aboutMe__line {
     margin: 0 14px;
-  }
+  } */
   .aboutMe__info {
     display:flex;
     grid-column-gap: 0;
     grid-row-gap: 0;
     flex-direction: column;
-    margin: 60px 14px 70px;
+    /* margin: 60px 14px 70px; */
   }
   .aboutMe__name {
     margin-top: 40px;
@@ -151,5 +151,16 @@
   .aboutMe__linkGithub {
     margin-top: 40px;
     align-self: flex-start;
+  }
+}
+@media screen and (max-width: 400px) {
+  .aboutMe__heading {
+    margin: 0 auto 28px 14px;
+  }
+  .aboutMe__line {
+    margin: 0 14px;
+  }
+  .aboutMe__info {
+    margin: 60px 14px 70px;
   }
 }
