--- a/src/components/FieldForm/fieldForm.css
+++ b/src/components/FieldForm/fieldForm.css
@@ -80,14 +80,14 @@
     width: 10vw;
   }
   .form__message-error {
-    width: 100%;
-    height: 1.25vw;
+    /* width: 100%;
+    height: 1.25vw; */
     display: inline;
     text-align: end;
-    color: #FF3055;
+    /* color: #FF3055;
     font-family: Inter, Georgia, sans-serif;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 400; */
     font-size: 9px;
     line-height: 11px;
   }
