--- a/src/components/Movies/SearchForm/searchForm.css
+++ b/src/components/Movies/SearchForm/searchForm.css
@@ -23,7 +23,10 @@
   border: none;
   border-radius: 9px;
 }
-
+/* .searchForm_input {
+  display: flex;
+  flex-direction: column;
+} */
 .searchForm__inputText {
   width: 90%;
   padding: 0;
@@ -38,9 +41,6 @@
   background: #F9F9F9;
   color: #A0A0A0;
 }
-.searchForm__inputText:focus {
-  border-bottom: 1px solid #A0A0A0;
-}
 /* .searchForm__inputText::before {
   content: '';
   width: 20px;
@@ -52,6 +52,7 @@
   margin-left: 19px;
 }
 .searchForm__inputText:focus {
+  border-bottom: 1px solid #A0A0A0;
   outline: none;
   color: #000000;
 }
@@ -72,6 +73,21 @@
 .searchForm__buttonSearch:hover {
   cursor: pointer;
   opacity: 0.8;
+}
+.searchForm__message-error {
+  position: relative;
+  top: -25px;
+  left: 90px;
+  width: 100%;
+  height: 1.25vw;
+  margin: 0;
+  padding: 0;
+  color: #FF3055;
+  font-family: Inter, Georgia, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;
 }
 .searchForm__textCheckbox {
   margin: 0;
@@ -102,10 +118,10 @@
   margin-left: 29px;
   width: 36px;
   height: 20px;
-  background-image: url('../../images/checkboxDisableSearchForm.svg');
+  background-image: url('../../../images/checkboxDisableSearchForm.svg');
 }
 .searchForm__switchCheckbox:checked + .searchForm__imgCheckbox {
-  background-image: url('../../images/checkboxActiveSearchForm.svg');
+  background-image: url('../../../images/checkboxActiveSearchForm.svg');
 }
 .searchForm__imgCheckbox:hover {
   cursor: pointer;
