--- a/src/components/PopupWithForm/popupWithForm.css
+++ b/src/components/PopupWithForm/popupWithForm.css
@@ -18,6 +18,7 @@
   font-family: Inter, Georgia, sans-serif;
   font-style: normal;
 }
+
 .form__save:hover {
   opacity: 0.8;
   cursor: pointer;
@@ -86,6 +87,18 @@
   }
 .formLogin__save {
   margin-top: 179px;
+}
+.formRegister__save_disable {
+  color: #FFFFFF;
+  background-color: #A0A0A0;
+}
+.formLogin__save_disable {
+  color: #FFFFFF;
+  background-color: #A0A0A0;
+}
+.formProfile__save-disable {
+  background-color: #ffffff;
+  color: #A0A0A0;
 }
 @media screen and (max-width: 800px) {
   .form__buttonOption {
